[package]
name = "day2"
version = "0.1.0"
authors = ["Frank Wang <frank.wangtao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode_computer = { git = "https://github.com/ProjectFrank/adventofcode2019", rev = "a90ebe0627b401f2a465b27d1081747cceff9c63" }