[package]
name = "day2"
version = "0.1.0"
authors = ["Frank Wang <frank.wangtao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode_computer = { git = "https://github.com/ProjectFrank/adventofcode2019", rev = "736a557646b3386b880d39dd32585b0553930c7c" }